backend-deploy.yml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: student-backend 
  labels: 
    app: student-backend 
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: student-backend 
  template: 
    metadata: 
      labels: 
        app: student-backend 
    spec: 
      containers: 
        - name: student-backend 
          image: 012765396827.dkr.ecr.us-east-1.amazonaws.com/vishnu-ecr-backend:latest 
          ports:
            - containerPort: 5000
      imagePullSecrets:
          - name: mykey1
